# pelikan-c

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
src/storage/seg/: item.c  segmerge.c
src/storage/slab/: item.c
test/: CMakeLists.txt
test/integration/: CMakeLists.txt
test/storage/seg/: check_seg.c
